<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.fatihyilmaz.quizzapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <TextView
            style="@style/TextView"
            android:text="@string/what_is_the_sum_of_2_2" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/Q1_2"
                style="@style/RadioButton"
                android:text="@string/_2" />

            <RadioButton
                android:id="@+id/Q1_4"
                style="@style/RadioButton"
                android:text="@string/_4" />

            <RadioButton
                android:id="@+id/Q1_6"
                style="@style/RadioButton"
                android:text="@string/_6" />
        </RadioGroup>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/what_is_the_first_letter_of_the_alphabet" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/Q2_A"
                style="@style/RadioButton"
                android:text="@string/a" />

            <RadioButton
                android:id="@+id/Q2_B"
                style="@style/RadioButton"
                android:text="@string/b" />

            <RadioButton
                android:id="@+id/Q2_C"
                style="@style/RadioButton"
                android:text="@string/c" />
        </RadioGroup>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/are_you_alive" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/Q3_yes"
                style="@style/RadioButton"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Q3_no"
                style="@style/RadioButton"
                android:text="@string/no" />

            <RadioButton
                android:id="@+id/Q3_maybe"
                style="@style/RadioButton"
                android:text="@string/maybe" />
        </RadioGroup>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/what_are_you_doing_right_now" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/Q4_eating"
                style="@style/RadioButton"
                android:text="@string/eating" />

            <RadioButton
                android:id="@+id/Q4_sleeping"
                style="@style/RadioButton"
                android:text="@string/sleeping" />

            <RadioButton
                android:id="@+id/Q4_takingFunQuiz"
                style="@style/RadioButton"
                android:text="@string/taking_fun_quiz" />
        </RadioGroup>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/is_this_quiz_easy" />

        <RadioGroup style="@style/RadioGroup">

            <RadioButton
                android:id="@+id/Q5_yes"
                style="@style/RadioButton"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/Q5_dontKnow"
                style="@style/RadioButton"
                android:text="@string/i_don_t_know" />

            <RadioButton
                android:id="@+id/Q5_no"
                style="@style/RadioButton"
                android:text="@string/no" />
        </RadioGroup>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/_6_which_is_not_essential_for_a_human_to_live" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Q6_eat"
                style="@style/CheckBox"
                android:text="@string/eat" />

            <CheckBox
                android:id="@+id/Q6_talk"
                style="@style/CheckBox"
                android:text="@string/talk" />

            <CheckBox
                android:id="@+id/Q6_see"
                style="@style/CheckBox"
                android:text="@string/see" />
        </LinearLayout>

        <View style="@style/LineView" />


        <TextView
            style="@style/TextView"
            android:text="@string/choose_all_of_the_examples_of_or_types_of_carbonhydrates_multiple_answers" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/Q7_galactose"
                style="@style/CheckBox"
                android:text="@string/a_galactose" />

            <CheckBox
                android:id="@+id/Q7_fructose"
                style="@style/CheckBox"
                android:text="@string/b_fructose" />

            <CheckBox
                android:id="@+id/Q7_surcrose"
                style="@style/CheckBox"
                android:text="@string/c_surcrose" />

            <CheckBox
                android:id="@+id/Q7_maltose"
                style="@style/CheckBox"
                android:text="@string/d_maltose" />
        </LinearLayout>

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/what_is_the_name_of_great_turkish_leader" />

        <EditText
            android:id="@+id/Q8_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mustafa_kemal" />

        <View style="@style/LineView" />

        <TextView
            style="@style/TextView"
            android:text="@string/when_mustafa_kemal_was_born_fill_the_blanks" />


        <EditText
            android:id="@+id/Q9_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_18" />

        <View style="@style/LineView" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submitMethod"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>